<resources>
    <string name="app_name">MarketWatcher</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="logEmail">Adresse e-mail</string>
    <string name="logPassword">Mot de passe</string>
    <string name="logConnect">Connexion</string>
    <string name="logName">Nom et prénom</string>
    <string name="barcodeScan">Scanner un code-barre</string>
    <string name="gtin">Renseigner le GTIN / code-barre</string>
    <string name="addProduct">Ajouter un produit</string>
    <string name="regConnect">Inscription</string>

    <!-- Activities -->
    <string name="home">Accueil</string>
    <string name="catalog">Catalogue</string>
    <string name="deals">Deals</string>
    <string name="navAdd">Ajout</string>

    <string name="action_settings">Settings</string>

    <string name="text_empty">Liste vide</string>

    <string name="regName">Nom</string>
    <string name="logRegisterLink">Pas de compte ? Cliquez ici pour vous inscrire !</string>
    <string name="mLogImageAlt">Application Logo</string>
    <string name="navDisconnect">Déconnexion</string>

    <string name="toastLogout">Vous avez été déconnecté</string>
    <string name="catalogSearch">Rechercher</string>
</resources>
