<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5CBD61"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="25dp"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:src="@drawable/white_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32dp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="32dp"/>

    <AutoCompleteTextView
        android:id="@+id/logEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/logEmail"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#A9EAAC" />

    <EditText
        android:id="@+id/logPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/logPassword"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#A9EAAC" />

    <Button
        android:id="@+id/logSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:textColor="#FFFFFF"
        android:text="@string/logConnect"
        android:fontFamily="sans-serif-regular"
        android:background="@null"
        android:textAllCaps="false" />

</LinearLayout>
