<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="top|center"
    android:orientation="vertical"
    android:padding="25dp"
    android:weightSum="1">

    <EditText
        android:id="@+id/regName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/regName"
        android:inputType="text"
        android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
        android:textColor="#fff"
        android:textColorHint="#aaa" />

    <AutoCompleteTextView
        android:id="@+id/regEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/logEmail"
        android:inputType="textEmailAddress"
        android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
        android:textColor="#fff"
        android:textColorHint="#aaa" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/logPassword"
        android:inputType="textPassword"
        android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
        android:textColor="#fff"
        android:textColorHint="#aaa" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/regSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#ffffff"
        android:text="@string/regConnect"
        android:textColor="#000" />

</LinearLayout>

